# nes

./: .gitignore  CMakeLists.txt  LICENSE  README
core/: main.cpp
src/: main.cpp
src/ceqn/: CMakeLists.txt  numbers.cpp
src/ceqn/include/eqn/: numbers.hpp
src/ceqn/test/: test.numbers.cpp
src/libimg/: CMakeLists.txt
src/libimg/include/img/: endian.hpp
src/libimg/test/: test.endian.cpp
src/libocr/: CMakeLists.txt
test/: CMakeLists.txt
test/include/test/: test.hpp
util/: CMakeLists.txt
util/include/util/: fmt.hpp
util/test/: simple_test.hpp  test.fmt.cpp
