CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT("nes" CXX)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_EXECUTABLE(${PROJECT_NAME}
	core/main.cpp
)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++14 -Wall)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	util
)

ENABLE_TESTING()

ADD_SUBDIRECTORY(util)
