project(util CXX)

ADD_LIBRARY(${PROJECT_NAME} INTERFACE)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE include/)

SET(TEST_NAME "${PROJECT_NAME}_test")

ADD_EXECUTABLE(${TEST_NAME}
  test/test.fmt.cpp
)

# TARGET_INCLUDE_DIRECTORIES(${TEST_NAME} PUBLIC test/)
TARGET_LINK_LIBRARIES(${TEST_NAME} ${PROJECT_NAME})

ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
