project(img CXX)

set(PROJECT_SOURCES
  trash.cpp
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${PROJECT_SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

SET(TEST_NAME "${PROJECT_NAME}_test")
SET(TEST_SOURCES
  test/test.endian.cpp
)

ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCES})

TARGET_LINK_LIBRARIES(${TEST_NAME} ${PROJECT_NAME})

ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
